foxed bug on homepage scroll and wallet transaction history make max-height and scroll on overflow

--- a/src/page/Home/Home.css
+++ b/src/page/Home/Home.css
@@ -12,13 +12,24 @@
   -ms-user-select: none;
   user-select: none;
   /* position: relative; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
+.HomeMain_arrange_width{
+  /* background-color: pink; */
+  width:100%;
+  height: 100%;
+  max-width: 1550px;
+}
+
 .HomeMain_alert_show{
   width: 100%;
   height: 100dvh;
   position: fixed;
   z-index: 10;
 }
+
 .Home_navbar {
   background-color: rgb(255, 255, 255);
   width: 100%;
